# conway

./: Cargo.toml  README.md  setup-hooks.sh  setup-target.sh
.github/workflows/: rust.yml
hooks/: pre-commit
src/: args.rs  automata.rs  board.rs  board_renderer.rs  console_renderer.rs  finite_board.rs  generators.rs  main.rs  simple_solver.rs  solver.rs
